<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Latalk</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="latalk">Latalk</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_message">Please login with your user name and password.\n You can sign up if you do not have an account</string>
    <string name="title_activity_user_messages">UserMessagesActivity</string>
    <string name="title_activity_grid_tab">GridTabActivity</string>
    <string name="title_activity_list_tab">ListTabActivity</string>
    <string name="title_activity_puzzle_tab">PuzzleTabActivity</string>
    <string name="title_activity_time_capsule_tab">TimeCapsuleTabActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_photo_comfirm">PhotoComfirmActivity</string>
    <string name="title_activity_time_capsule">TimeCapsuleActivity</string>
    <string name="title_activity_puzzle_map">PuzzleMapActivity</string>
    <string name="API_KEY">AIzaSyCY55KL_aQTQ-tt1sh2A1KIYiys2wlc0I0</string>
    <string name="title_activity_control_panel">ControlPanelActivity</string>
    <string name="title_activity_puzzle_race_create">PuzzleRaceCreateActivity</string>
    <string name="title_activity_puzzle_create">PuzzleCreateActivity</string>
    <string name="title_activity_custom_gallery">CustomGalleryActivity</string>
    <string name="pic_puzzle_hint">Touch to add caption for this photo</string>
    <string name="puzzle_race_hint">Add some description for your race</string>
    <string name="title_activity_time_capsule_map">TimeCapsuleMapActivity</string>
    <string name="title_activity_full_pic">FullPicActivity</string>
    <string name="title_activity_race_browser">RaceBrowserActivity</string>
    <string name="background_location_service">Background location monitoring service</string>
    <string name="facebook_app_id">1673127742921347</string>
    <string name="title_activity_import_sns">ImportSNSActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_account_settings">AccountSettingsActivity</string>
    <string name="title_activity_query_settings">QuerySettingsActivity</string>
    <string-array name="update_interval_entries">
        <item>5s</item>
        <item >10s</item>
        <item >20s</item>
    </string-array>
    <string-array name="update_interval_values">
        <item >5</item>
        <item >10</item>
        <item >20</item>
    </string-array>
    <string name="update_interval_default">10</string>
    <string name="enable_update_summary">Query Latalk nearby and update</string>
    <string name="enable_update_title">Backend Query</string>
    <string name="update_interval_title">Query Interval</string>
    <string name="update_interval_summary">Query Interval</string>
    <string name="distance_pref_title">Distance</string>

</resources>
