<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <SwitchPreference
    	android:key="pref_key_be_updatepref_key_be_update"
        android:summary="@string/enable_update_summary"
        android:title="@string/enable_update_title"
        android:defaultValue="true"/>
    <ListPreference
        android:key="pref_key_update_interval"
        android:summary="@string/update_interval_summary"
        android:title="@string/update_interval_title"
        android:entries="@array/update_interval_entries"
        android:entryValues="@array/update_interval_values"
        android:defaultValue="@string/update_interval_default"
        />
    <com.xhanshawn.view.SeekBarPreference
        android:key="pref_key_distance"
        android:title="@string/distance_pref_title"
        android:max="10"
        >
    </com.xhanshawn.view.SeekBarPreference>
</PreferenceScreen>
